Fixing installation too much extra space + Blind fixing the "stretched logo" on UI tests (it works locally + demo + demo2)

--- a/plugins/Installation/stylesheets/installation.css
+++ b/plugins/Installation/stylesheets/installation.css
@@ -29,6 +29,7 @@ p {
 
 #logo {
     padding: 20px 30px;
+    padding-bottom: 35px;
 }
 #logo img {
     height:40px;
@@ -64,6 +65,7 @@ code {
 
 #topRightBar {
     float: right;
+    margin-top: -60px;
 }
 
 .error {
