--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -17,7 +17,7 @@ body {
 
 #logo  {
     img.default-piwik-logo {
-        height: 21px;
+        height: 40px;
         width: 82px;
         margin-top: 4px;
     }
