--- a/plugins/Zeitgeist/stylesheets/ui/_header.less
+++ b/plugins/Zeitgeist/stylesheets/ui/_header.less
@@ -17,10 +17,6 @@
   #logo > a {
     text-decoration: none;
   }
-
-  #logo img {
-    height: 40px;
-  }
 }
 #javascriptDisabled,
 #javascriptDisabled a {
